# Harbor-Terminal-Bench

./: .gitignore  CLAUDE.md  FAILED_TASKS.md  ITERATIONS.md  RUN_ALL_ANALYSIS.md  inspect_messages.py  main.py  nop_verify.json  pyproject.toml  rerun5.json  run_all.json  show_keys.py  trace_viewer.py
mimo_agent/: __init__.py  agent.py  config.py  key_pool.py
tests/: test.ipynb  test_agent_loop.ipynb
