[project]
name = "agent-in-harbor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]
